# python-aiodns

./: ChangeLog  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-wheels.yml
aiodns/: __init__.py
scripts/: release-notes.py
tests/: test_aiodns.py  test_compat.py
