[project]
name = "aiodns"
dynamic = ["version"]
requires-python = ">=3.10"
readme.content-type = "text/x-rst"
readme.file = "README.rst"
description = "Simple DNS resolver for asyncio"
authors = [
    { name = "Saúl Ibarra Corretgé", email = "s@saghul.net" }
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "pycares>=5.0.0,<6",
]

# TODO: Figure out how to make POSIX and Microsoft Windows
# attributes appear in the platforms informaiton.
# platfroms=["POSIX", "Microsoft Windows"]

[tool.setuptools.dynamic]
version = {attr = "aiodns.__version__"}

[build-system]
# pycares required because of the fact that it's in the __init__ module
requires = ["setuptools", "pycares"]

[tool.setuptools]
# Disables inclusion of non-package data (like tests) in the wheel if they are in the sdist
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests*", "test_*"]
include = ["aiodns*"]

[project.urls]
    repository = "https://github.com/aio-libs/aiodns.git"
